--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=news-portal
+
+spring.datasource.url=jdbc:mysql://localhost:3306/news_portal
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.hibernate.auto_quote_keyword=true
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
